--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+		"start": "nodemon index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.24.0",
 		"bad-words": "^3.0.4",
 		"bcrypt": "^5.0.1",
 		"cloudinary": "^1.26.3",
@@ -28,6 +28,7 @@
 		"multer": "^1.4.3",
 		"node-cron": "^3.0.0",
 		"nodemailer": "^6.6.3",
+		"password-validator": "^5.1.1",
 		"sanitize-html": "^2.4.0",
 		"sharp": "^0.29.1",
 		"web-push": "^3.4.5",
